--- a/app/src/main/res/layout/controller_layout.xml
+++ b/app/src/main/res/layout/controller_layout.xml
@@ -14,7 +14,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/controllerButton"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
